--- a/VisualTAF/VisualTAF/VisualTAF.csproj
+++ b/VisualTAF/VisualTAF/VisualTAF.csproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="MouseMethods.cs" />
     <Compile Include="ImageWorker.cs" />
+    <Compile Include="ParrallelWorkTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ImageWorkerTests.cs" />
   </ItemGroup>
