keyboard methods added, little change in project structure

--- a/VisualTAF/VisualTAF/packages.config
+++ b/VisualTAF/VisualTAF/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EmguCV" version="3.1.0.1" targetFramework="net462" />
+  <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
   <package id="Magick.NET-Q16-AnyCPU" version="7.0.3.502" targetFramework="net462" />
   <package id="NUnit" version="3.5.0" targetFramework="net462" />
   <package id="OpenTK" version="1.1.2225.0" targetFramework="net462" />
