--- a/VisualTAF/VisualTAF/VisualTAF.csproj
+++ b/VisualTAF/VisualTAF/VisualTAF.csproj
@@ -72,13 +72,18 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsInput, Version=1.0.4.0, Culture=neutral, PublicKeyToken=9b287f7dc5073cad, processorArchitecture=MSIL">
+      <HintPath>..\packages\InputSimulator.1.0.4.0\lib\net20\WindowsInput.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="ZedGraph, Version=5.1.5.28844, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL">
       <HintPath>..\packages\ZedGraph.5.1.5\lib\ZedGraph.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MouseMethods.cs" />
+    <Compile Include="WinAPI\KeyboardMethods.cs" />
+    <Compile Include="WinAPI\MouseMethods.cs" />
     <Compile Include="ImageWorker.cs" />
     <Compile Include="ParrallelWorkTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
