--- a/VisualTAF/VisualTAF/VisualTAF.csproj
+++ b/VisualTAF/VisualTAF/VisualTAF.csproj
@@ -50,6 +50,10 @@
       <HintPath>..\packages\Ghpr.Core.0.4.6.7\lib\net452\Ghpr.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Ghpr.MSTest, Version=0.4.6.7, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ghpr.MSTest.0.4.6.7\lib\net452\Ghpr.MSTest.exe</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Ghpr.NUnit, Version=0.4.6.7, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Ghpr.NUnit.0.4.6.7\lib\net452\Ghpr.NUnit.dll</HintPath>
       <Private>True</Private>
@@ -58,6 +62,7 @@
       <HintPath>..\packages\Magick.NET-Q16-AnyCPU.7.0.5.502\lib\net40-client\Magick.NET-Q16-AnyCPU.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Mono.Cecil, Version=0.9.6.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.Engine.3.6.1\lib\Mono.Cecil.dll</HintPath>
       <Private>True</Private>
@@ -114,16 +119,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tests\MSTests\ImageWorkerMSTests.cs" />
+    <Compile Include="Tests\MSTests\WinAPIMSTests.cs" />
     <Compile Include="WinAPI\KeyboardMethods.cs" />
     <Compile Include="WinAPI\MouseMethods.cs" />
     <Compile Include="ImageWorker.cs" />
-    <Compile Include="Tests\WinAPITests.cs" />
+    <Compile Include="Tests\NUnitTests\WinAPINUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\ImageWorkerTests.cs" />
+    <Compile Include="Tests\NUnitTests\ImageWorkerNUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Ghpr.Core.Settings.json" />
+    <None Include="Ghpr.MSTest.Settings.json" />
     <None Include="Ghpr.NUnit.Settings.json" />
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
@@ -134,6 +142,7 @@
   <ItemGroup>
     <Content Include="License-LGPL.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
