--- a/VisualTAF/VisualTAF/packages.config
+++ b/VisualTAF/VisualTAF/packages.config
@@ -2,12 +2,20 @@
 <packages>
   <package id="EmguCV" version="3.1.0.1" targetFramework="net462" />
   <package id="Ghpr.Core" version="0.4.6.7" targetFramework="net461" />
+  <package id="Ghpr.MSTest" version="0.4.6.7" targetFramework="net461" />
   <package id="Ghpr.NUnit" version="0.4.6.7" targetFramework="net461" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
   <package id="Magick.NET-Q16-AnyCPU" version="7.0.5.502" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="NUnit" version="3.6.1" targetFramework="net461" />
+  <package id="NUnit.Console" version="3.6.1" targetFramework="net461" />
+  <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net461" />
   <package id="NUnit.Engine" version="3.6.1" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net461" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net461" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net461" />
   <package id="OpenTK" version="2.0.0" targetFramework="net461" />
   <package id="OpenTK.GLControl" version="1.1.2349.61993" targetFramework="net461" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net461" />
