--- a/VisualTAF/VisualTAF/packages.config
+++ b/VisualTAF/VisualTAF/packages.config
@@ -6,6 +6,7 @@
   <package id="Ghpr.NUnit" version="0.4.6.7" targetFramework="net461" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
   <package id="Magick.NET-Q16-AnyCPU" version="7.0.5.502" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.UnitTesting" version="11.0.50727.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="NUnit" version="3.6.1" targetFramework="net461" />
   <package id="NUnit.Console" version="3.6.1" targetFramework="net461" />
