--- a/VisualTAF/VisualTAF/packages.config
+++ b/VisualTAF/VisualTAF/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.0.0" targetFramework="net461" />
   <package id="EmguCV" version="3.1.0.1" targetFramework="net462" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Ghpr.Core" version="0.4.6.7" targetFramework="net461" />
   <package id="Ghpr.MSTest" version="0.4.6.7" targetFramework="net461" />
   <package id="Ghpr.NUnit" version="0.4.6.7" targetFramework="net461" />
