--- a/VisualTAF/VisualTAF/packages.config
+++ b/VisualTAF/VisualTAF/packages.config
@@ -1,24 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.0.0" targetFramework="net461" />
   <package id="EmguCV" version="3.1.0.1" targetFramework="net462" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="Ghpr.Core" version="0.4.6.7" targetFramework="net461" />
-  <package id="Ghpr.MSTest" version="0.4.6.7" targetFramework="net461" />
-  <package id="Ghpr.NUnit" version="0.4.6.7" targetFramework="net461" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
-  <package id="Magick.NET-Q16-AnyCPU" version="7.0.5.502" targetFramework="net461" />
+  <package id="Magick.NET-Q16-AnyCPU" version="7.0.5.900" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.UnitTesting" version="11.0.50727.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
-  <package id="NUnit" version="3.6.1" targetFramework="net461" />
-  <package id="NUnit.Console" version="3.6.1" targetFramework="net461" />
+  <package id="NUnit" version="3.7.0" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net461" />
-  <package id="NUnit.Engine" version="3.6.1" targetFramework="net461" />
   <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net461" />
   <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net461" />
   <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net461" />
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net461" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net461" />
+  <package id="NUnit.Runners" version="3.6.1" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net461" />
+  <package id="NUnitOrange" version="2.1" targetFramework="net461" />
+  <package id="NUnitTestAdapter" version="2.1.1" targetFramework="net461" />
   <package id="OpenTK" version="2.0.0" targetFramework="net461" />
   <package id="OpenTK.GLControl" version="1.1.2349.61993" targetFramework="net461" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net461" />
