--- a/VisualTAF/VisualTAF/app.config
+++ b/VisualTAF/VisualTAF/app.config
@@ -2,7 +2,30 @@
 <configuration>
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     </configSections>
+  <log4net debug="false">
+    <appender name="Console" type="log4net.Appender.ConsoleAppender">
+      <!-- A1 uses PatternLayout -->
+      <layout type="log4net.Layout.PatternLayout">
+        <!-- Print the date in ISO 8601 format -->
+        <conversionPattern value="%date %-5level  - %message%newline" />
+      </layout>
+    </appender>
+    <appender name="fileApp" type="log4net.Appender.FileAppender">
+      <param name="File" value="LogFile.txt" />
+      <param name="AppendToFile" value="false" />
+      <layout type="log4net.Layout.PatternLayout">
+        <!-- Print the date in ISO 8601 format -->
+        <conversionPattern value="%message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <appender-ref ref="Console" />
+      "
+      <appender-ref ref="fileApp" />"
+    </root>
+  </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
