--- a/VisualTAF/VisualTAF/packages.config
+++ b/VisualTAF/VisualTAF/packages.config
@@ -3,6 +3,7 @@
   <package id="EmguCV" version="3.1.0.1" targetFramework="net462" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Magick.NET-Q16-AnyCPU" version="7.0.6.600" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.UnitTesting" version="11.0.50727.1" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
